--- a/Views/Ubicaciones/Entrenadores.cshtml
+++ b/Views/Ubicaciones/Entrenadores.cshtml
@@ -19,7 +19,7 @@
             <td>
                 @item.Pueblo.Nombre
             </td>
-            <td>@item.Foto</td>
+             <td><img src="@item.Foto" width="450" height="350" /></td>
             <td>
                 <a href="/ubicaciones/editarentrenador/@item.Id" class="btn btn-secondary">Editar</a>
 
@@ -37,4 +37,3 @@
     }
 </table>
 
-<a href="/ubicaciones/nuevoentrenador" class="btn btn-primary">Añadir Entrenador</a>
