--- a/Views/Ubicaciones/EditarEntrenador.cshtml
+++ b/Views/Ubicaciones/EditarEntrenador.cshtml
@@ -1,16 +1,68 @@
 @model Entrenador
-
 <h1>Editar Entrenador</h1>
 
-<form action="" method="post">
-    <input type="hidden" asp-for="Id" />
-    <div class="form-group">
-        <label asp-for="Nombre"></label>
-        <input asp-for="Nombre" type="text" class="form-control">
+<form asp-controller="Ubicaciones" asp-action="EditarEntrenador">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
+            
+            <div class="form-group formM">
+                <label asp-for="Nombre" class="colorForm"></label>
+                <input asp-for="Nombre" class="form-control" />
+                <span asp-validation-for="Nombre" class="text-danger"></span>
+            </div>   
+  <div class="form-group formM">
+                <label asp-for="Foto" class="colorForm"></label>
+                <input asp-for="Foto" class="form-control" />
+            </div> 
+
+
+
+
+             <div class="form-group center">
+                 <button type="submit" class="btn btn-success">Actualizar</button> 
+                <button  class="btn btn-danger"  onclick="window.location='@Url.Action("Entrenador", "Ubicaciones")'" >Cancelar</button> 
+            </div>                
+
+        </form>
+            
+        <td>@Html.DisplayTextFor(model => model.Respuesta)</td>    
+    
     </div>
-    <div class="form-group">
-        <label asp-for="Foto"></label>
-        <input asp-for="Foto" type="text" class="form-control">
-    </div>
-    <button class="btn btn-primary">Editar Entrenador</button>
-</form>
+</div>
+</div>
+</section>
+
+<script>
+    document.querySelector('#Editar').addEventListener('submit', function(e) {
+      var form = this;
+      
+      e.preventDefault();
+      
+      swal({
+          title: "¿Está seguro de la acción?",
+          text: "Esto cambiará los datos del producto",
+          icon: "warning",
+          buttons: [
+            'Cancelar',
+            'Continuar'
+          ],
+          dangerMode: true,
+        }).then(function(isConfirm) {
+          if (isConfirm) {
+           
+              form.submit();
+          
+          } else {
+            swal("Acción cancelada", "El producto no se ha modificado", "error");
+          }
+        });
+    });
+
+    
+  </script>
+  
+  <style>
+    .swal-button--confirm {
+      background-color: #DD6B55;
+    }
+  </style>
