--- a/Views/Ubicaciones/Pueblos.cshtml
+++ b/Views/Ubicaciones/Pueblos.cshtml
@@ -17,7 +17,14 @@
             <td>
                 @item.Region.Nombre
             </td>
-           
+           <td>
+                <a href="/ubicaciones/EditarPueblo/@item.Id" class="btn btn-secondary">Editar</a>
+              
+              <form action="/ubicaciones/BorrarPueblo" method="post" class="d-inline-block">
+                    <input type="hidden" name="id" value="@item.Id" />
+                    <button class="btn btn-danger">Borrar</button>
+                </form>
+            </td>
         </tr>
     }
     @if (Model.Count == 0) {
