--- a/Views/Ubicaciones/Regiones.cshtml
+++ b/Views/Ubicaciones/Regiones.cshtml
@@ -20,6 +20,14 @@
                     <span>@pueblo.Nombre</span>
                 }
             </td>
+            <td>
+                <a href="/ubicaciones/EditarRegion/@item.Id" class="btn btn-secondary">Editar</a>
+
+              <form action="/ubicaciones/borrarregion" method="post" class="d-inline-block">
+                    <input type="hidden" name="id" value="@item.Id" />
+                    <button class="btn btn-danger">Borrar</button>
+                </form>
+            </td>
         </tr>
     }
     @if (Model.Count == 0) {
